--- a/src/components/ExperienceTile.css
+++ b/src/components/ExperienceTile.css
@@ -1,19 +1,30 @@
 .tile {
     display: flex;
-    /* flex: 1 1 0px; */
     flex-direction: row;
-    /* margin-bottom: 50px; */
-    /* align-content: left; */
     align-items: center;
-    /* justify-content: space */
     margin: auto;
-    /* justify-content: center; */
+    max-width: 700px;
 }
 
 .companyLogo {
     /* height: 15vmin; */
-    height: 150px;
-    width: 150px;
+    height: 125px;
+    width: 125px;
     pointer-events: none;
     object-fit: cover;
+}
+
+.contentRight {
+    margin-left: 2rem;
+}
+
+@media (max-width: 600px) {
+    .tile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+        max-width: 700px;
+        margin-bottom: 50px;
+    }
 }
