--- a/src/pages/pagestyles/Experience.css
+++ b/src/pages/pagestyles/Experience.css
@@ -1,5 +1,5 @@
 .experiences {
-    /* display: grid; */
-    /* justify-content: space-evenly; */
-    grid-template-columns: repeat(auto-fit, 250px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
